# dotfiles

./: .chezmoi.toml.tmpl  .chezmoiignore  .gitignore  .mise.toml  CLAUDE.md  CONTRIBUTING.md  README.md  bash_aliases  bashrc  dot_aerospace.toml.tmpl  dot_bash_aliases  dot_bash_profile.tmpl  dot_bashrc.tmpl  dot_gitconfig  dot_gitconfig.tmpl  dot_tmux.conf  dot_zprofile.tmpl  dot_zshenv  dot_zshrc  executable_dot_xsessionrc  mise.toml  psqlrc  pyproject.toml  rcrc  run_generate-zellij-web-certs.sh.tmpl  run_once_after_wkflw-ntfy-generate-topic.sh.tmpl  run_once_ntfy-generate-topic.sh  run_onchange_install_rustup.sh  run_onchange_system_packages_autoinstall.sh.tmpl  run_onchange_system_packages_autoinstall_macos.sh.tmpl  tmux.conf  vimrc
.chezmoidata/: system_packages_autoinstall.yaml
.chezmoiscripts/: run_install_rustup.sh  run_once_after_2026-05-28-cleanup-library.sh.tmpl  run_once_after_2026-05-28-cleanup-wkflw-ntfy-state.sh.tmpl  run_once_after_2026-05-28-cleanup-zellij-web-certs.sh.tmpl  run_once_after_2026-06-01-configure-swiftbar.sh.tmpl  (+5 more)
.githooks/: pre-commit
private_dot_local/lib/aerospace-workspaces/: mise.toml  pyproject.toml
private_dot_local/lib/aerospace-workspaces/aerospace_workspaces/: __init__.py  hud.py  swiftbar.py  workspaces.py
private_dot_local/lib/aerospace-workspaces/tests/: test_hud.py  test_swiftbar.py  test_workspaces.py
private_dot_local/lib/cmd-notify/: mise.toml  pyproject.toml
private_dot_local/lib/cmd-notify/cmd_notify/: __init__.py  icons.py  notify.py
private_dot_local/lib/cmd-notify/tests/: test_icons.py  test_notify.py
(+197 files in other folders)
