[project]
name = "dotfiles-skills"
version = "0.1.0"
description = "Dotfiles repository with Claude Code skill scripts"
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "toon-format==0.9.0b1",
]

[tool.pytest.ini_options]
testpaths = ["test/skills"]
python_files = "test_*.py"
addopts = "-v"
